<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">DemoApp</string>
    <string name="general_functions_settings">Function</string>
    <string name="general_check_app_version">Demo Version</string>
    <string name="general_check_version">Firmware Version</string>
    <string name="general_strApkVersion">Apk Version:</string>
    <string name="general_strStmVersion">STM32 Version:</string>
    <string-array name="general_functions">

        <item>BarCode</item>

        <item>M1Card(RFID)</item>
        <item>RFID(125K)</item>

        <item>ID(RFID)</item>
        <item>ID-GAA</item>

        <item>NFC(M1Card)</item>
        <item>NFC(ISO 15693)</item>


        <item>UHF_PhyChips</item>
        <item>UHF_RBM550</item>
        <item>UHF_R2000</item>

        <item>FP_GAA</item>
        <item>FP_GAB</item>
        <item>FP_JRA</item>


        <item>BeiDou</item>
    </string-array>
    <string name="general_usb_fp_tips">1.The underlying fingerprint function uses USB HOST communication. After entering the fingerprint demonstration Demo, the device USB can not charge and communicate \n\n2. Only after exiting and plugging out the USB data line can the normal use of USB charging and communication function be achieved. \n\n3. Developers recommend using WiFi ADB to debug and develop fingerprint module!</string>
    <string name="general_dialog_tips">Tips</string>
    <string name="general_tips">Tips:</string>
    <string name="general_exit">Are you sure to exit？</string>
    <string name="general_yes">Yes</string>
    <string name="general_no">No</string>
    <string name="general_open_serial_fail">Open the serial port fails!</string>
    <string name="general_open_serial_success">Open the serial port success!</string>
    <string name="general_write_success">写入成功！</string>
    <string name="general_write_fail">写入失败！</string>
    <string name="general_ok">OK</string>
    <string name="general_cancel">Cancle</string>
    <string name="general_setting">Setting</string>
    <string name="barcode_scan">Scan</string>
    <string name="barcode_scanning_open">Scanning</string>
    <string name="barcode_scanning_close">Stop</string>
    <string name="barcode_scan_clear">Clear</string>
    <string name="barcode_scan_is_auto_clear">Auto Clear:</string>
    <string name="barcode_scan_all">All: %1$s</string>
    <string name="barcode_scan_success">Success: %1$s</string>
    <string name="barcode_scanner_status">Status</string>
    <string name="barcode_scanner_open">On</string>
    <string name="barcode_scanner_close">Off</string>
    <string name="barcode_setting">Setting</string>
    <string name="barcode_setting_interval">Scan interval:</string>
    <string name="barcode_setting_outmode">OutPut Mode</string>
    <string-array name="barcode_setting_endchar">
        <item>Enter</item>
        <item>New Line</item>
        <item>Space</item>
        <item>Tab</item>
        <item>None</item>

    </string-array>
    <string name="barcode_setting_prefix">Prefix</string>
    <string name="barcode_setting_suffix">Suffix</string>
    <string-array name="barcode_setting_effect">
        <item>None</item>
        <item>Vibrator</item>
        <item>Sound</item>
        <item>Vibrator And Sound</item>
    </string-array>
    <string name="barcode_setting_enable">Enable</string>
    <string name="barcode_setting_disable">Disable</string>
    <string name="barcode_setting_showtoast">Whether to print Toast：</string>
    <string-array name="barcode_setting_output_mode">
        <item>Direct Display</item>
        <item>Key Emulation</item>
        <item>Copy To System ClipBoard</item>
        <item>BroadCast</item>
    </string-array>
    <string name="idcard_read">Read IDCard</string>
    <string name="idcard_reading">Reading</string>
    <string name="idcard_reading_stop">Stop</string>
    <string name="idcard_clear">Clear</string>
    <string name="idcard_uid">UID</string>
    <string name="hxuhf_open">Open</string>
    <string name="hxuhf_search_tag">Inventory</string>
    <string name="hxuhf_setting">Setting</string>
    <string name="hxuhf_read_count">count:</string>
    <string name="hxuhf_readtime">time：</string>
    <string name="hxuhf_singlesearch">Single</string>
    <string name="hxuhf_txt_offset">Offset:</string>
    <string name="hxuhf_txt_length">Length:</string>
    <string name="hxuhf_txt_region">Region:</string>
    <string name="hxuhf_button_get_region">get region</string>
    <string name="hxuhf_button_set_region">set region</string>
    <string name="hxuhf_get_region_success">Get region success.</string>
    <string name="hxuhf_set_region_success">Setting the zone succeeded.</string>
    <string name="hxuhf_get_channel_success">Get channel successfully.</string>
    <string name="hxuhf_set_channel_success">Set up channel successfully.</string>
    <string name="hxuhf_get_region_error1">Failed to get area.</string>
    <string name="hxuhf_get_region_error2">Get area is not in the preset range.</string>
    <string name="hxuhf_set_region_error1">Setting the area failed.</string>
    <string name="hxuhf_get_channel_error1">Failed to get channel.</string>
    <string name="hxuhf_get_channel_error2">The corresponding area does not have this channel.</string>
    <string name="hxuhf_set_channel_error1">Failed to set the channel.</string>
    <string name="hxuhf_txt_channel">Channel:</string>
    <string name="hxuhf_button_get_channel">get channel</string>
    <string name="hxuhf_button_set_channel">set channel</string>
    <string-array name="hxuhf_region">
        <item>Korea (0x11)</item>
        <item>North America (0x21)</item>
        <item>US (0x22)</item>
        <item>Europe (0x31)</item>
        <item>Japan (0x41)</item>
        <item>China1 (0x51)</item>
        <item>China2 (0x52)</item>
    </string-array>
    <string name="rbuhf_text_reset">reset</string>
    <string name="rbuhf_button_reset">reset</string>
    <string name="rbuhf_text_show_version">show version</string>
    <string name="rbuhf_button_get_version">get version</string>
    <string name="rbuhf_button_set_power">set power</string>
    <string name="rbuhf_button_get_power">get power</string>
    <string name="rbuhf_reset_success">reset success</string>
    <string name="rbuhf_reset_failure">reset failure: </string>
    <string name="rbuhf_set_power_hint">18 ~ 26</string>
    <string name="rbuhf_set_power_success">set power success</string>
    <string name="rbuhf_set_power_failure">set power failure: </string>
    <string name="rbuhf_set_power_outnumber">Please enter the number between 18~26</string>
    <string name="rbuhf_get_power_success">get power success</string>
    <string name="rbuhf_get_power_failure">get power failure: </string>
    <string name="rbuhf_start_frequency">Freq start</string>
    <string name="rbuhf_end_frequency">Freq end</string>
    <string name="rbuhf_khz">KHz</string>
    <string name="rbuhf_mhz">MHz</string>
    <string name="rbuhf_frequency_space">Freq space</string>
    <string name="rbuhf_frequency_quantity">Freq quantity</string>
    <string name="rbuhf_rf_specifications">RF specifications</string>
    <string name="rbuhf_custom_spectrum">Custom spectrum</string>
    <string name="rbuhf_system_default_frequency">System default frequency</string>
    <string name="rbuhf_setting_empty_error1">Freq start cannot be empty!!!</string>
    <string name="rbuhf_setting_empty_error2">Freq space cannot be empty!!!</string>
    <string name="rbuhf_setting_empty_error3">Freq quantity cannot be empty!!!</string>
    <string name="rbuhf_setting_empty_error4">Freq end cannot be empty!!!</string>
    <string name="rbuhf_setting_error1">Freq start is out of range!!!</string>
    <string name="rbuhf_setting_error2">Freq space needs to be greater than or equal to 1 !!!</string>
    <string name="rbuhf_setting_error3">Freq quantity needs to be greater than or equal to 1 !!!</string>
    <string name="rbuhf_setting_error4">Freq start cannot be greater than Freq end !!!</string>
    <string-array name="rbhxuhf_region">
        <item>FCC (0x01)</item>
        <item>ETSI (0x02)</item>
        <item>CHN (0x03)</item>
    </string-array>
    <string name="hxuhf_txt_accesspwd">Password:</string>
    <string name="hxuhf_txt_timeout">timeout:</string>
    <string name="hxuhf_tab_read">Tag read</string>
    <string name="hxuhf_tab_write">Tag write</string>
    <string name="hxuhf_tab_open_lamp">Tag open lamp</string>
    <string name="hxuhf_txt_tag_tit">Selected tag:</string>
    <string name="hxuhf_txt_read_eare">Read area:</string>
    <string name="hxuhf_txt_write_eare">Write area:</string>
    <string name="hxuhf_txt_count">0000</string>
    <string name="hxuhf_txt_pwdzero">00000000</string>
    <string name="hxuhf_hint_write_read">The offset address is the starting position of the value read and write area.
        Length refers to the length of the data read.
        This text only supports 16 bits, 1 data length = two bytes = 4 hexadecimal digits.</string>
    <string name="hxuhf_power">Power:</string>
    <string name="hxuhf_write">Write</string>
    <string name="hxuhf_read">Read</string>
    <string name="hxuhf_txt_null">N/A</string>
    <string name="hxuhf_info_connect_success">Connection success</string>
    <string name="hxuhf_info_connect_fail">Connection failed</string>
    <string name="hxuhf_inventory_over">Inventory over</string>
    <string name="hxuhf_read_timeout">Read timeout！</string>
    <string name="hxuhf_connect_to_device">Connect device</string>
    <string name="hxuhf_connecting_to_device">Connecting device,please wait...</string>
    <string name="hxuhf_txt_singleScanSetting">Single scan settings</string>
    <string name="hxuhf_read_success">Read success！</string>
    <string name="hxuhf_read_fail">Read failed！</string>
    <string name="hxuhf_length_zero">Data length cannot be 0！</string>
    <string name="hxuhf_length_not_right">Written data length is incorrect！</string>
    <string name="hxuhf_cycle_reading_interval">Cycle reading interval(ms):</string>
    <string name="hxuhf_cycle_reading">Cycle reading</string>
    <string name="hxuhf_cancel_selected">Cancel Selected</string>
    <string name="hxuhf_stop">Stop</string>
    <string-array name="hxuhf_dbm">
        <item>8.0</item>
        <item>10.0</item>
        <item>11.0</item>
        <item>12.0</item>
        <item>17.0</item>
        <item>18.0</item>
        <item>18.0</item>
        <item>18.5</item>
        <item>19.0</item>
        <item>19.5</item>
        <item>20.0</item>
        <item>20.5</item>
        <item>21.0</item>
        <item>21.5</item>
        <item>22.0</item>
        <item>22.5</item>
        <item>23.0</item>
        <item>23.5</item>
        <item>24.0</item>
        <item>24.5</item>
        <item>25.0</item>
        <item>25.5</item>
        <item>26.0</item>
        <item>26.5</item>
        <item>27.0</item>
        <item>27.5</item>
        <item>28.0</item>
        <item>28.5</item>
        <item>29.0</item>
        <item>29.5</item>
        <item>30.0</item>
        <item>30.5</item>
    </string-array>
    <string name="fp_jra_register_fingerprint">Registration fingerprint</string>
    <string name="fp_jra_validate_fingerprint">Verify fingerprint</string>
    <string name="fp_jra_noID">Please enter the ID</string>
    <string name="fp_jra_capture">Capture</string>
    <string name="fp_jra_enroll">Enroll</string>
    <string name="fp_jra_search">Search</string>
    <string name="fp_jra_stop">Stop</string>
    <string name="fp_jra_clear">Clear</string>
    <string name="fp_jra_infos">Infos</string>
    <string name="fp_gaa_capture">Capture</string>
    <string name="fp_gaa_enroll">Enroll</string>
    <string name="fp_gaa_search">Search</string>
    <string name="fp_gaa_stop">Stop</string>
    <string name="fp_gaa_clear">Clear</string>
    <string name="fp_gaa_infos">Infos</string>
</resources>