<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/fingerImage"
                    android:layout_width="256px"
                    android:layout_height="288px" />

                <ProgressBar
                    android:id="@+id/bar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="256px"
                    android:layout_height="4dp" />

            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/capture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fp_jra_capture"
                android:textAllCaps="false"
                android:textSize="10sp" />

            <Button
                android:id="@+id/enroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fp_jra_enroll"
                android:textAllCaps="false"

                android:textSize="10sp" />

            <Button
                android:id="@+id/search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fp_jra_search"
                android:textAllCaps="false"

                android:textSize="10sp" />

            <Button
                android:id="@+id/stop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fp_jra_stop"
                android:textAllCaps="false"

                android:textSize="10sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/infos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fp_jra_infos"
            android:textAllCaps="false"
            android:textSize="10sp" />
        <Button
            android:id="@+id/clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fp_jra_clear"
            android:textAllCaps="false"
            android:textSize="10sp" />
    </LinearLayout>

</LinearLayout>