<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="400dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hxuhf_txt_read_eare"

            android:textAllCaps="false" />

        <Spinner
            android:id="@+id/sp_area"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_strTimeout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/hxuhf_txt_timeout"
                android:textAllCaps="false"

                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_outtime"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tv_strTimeout"
                android:inputType="number"
                android:text="5000"
                android:textAllCaps="false"

                android:textSize="14sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_strpwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/hxuhf_txt_accesspwd"
                android:textAllCaps="false"

                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_pwd"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tv_strpwd"
                android:text="00000000"
                android:textAllCaps="false"

                android:textSize="14sp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_strOffset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/hxuhf_txt_offset"
                android:textAllCaps="false"

                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_offset"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tv_strOffset"
                android:inputType="number"
                android:text="0"
                android:textSize="14sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_strlength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/hxuhf_txt_length"
                android:textAllCaps="false"

                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_strlength"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tv_strlength"
                android:inputType="number"
                android:text="5"
                android:textSize="14sp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_region"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/hxuhf_txt_region"
                android:textAllCaps="false"

                android:textSize="14sp" />

            <Spinner
                android:id="@+id/sp_region"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/tv_region"
                android:layout_toRightOf="@+id/tv_region" />

            <Button
                android:id="@+id/get_region_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_toEndOf="@+id/sp_region"
                android:layout_toRightOf="@+id/sp_region"
                android:text="@string/hxuhf_button_get_region" />

            <Button
                android:id="@+id/set_region_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_toEndOf="@+id/get_region_button"
                android:layout_toRightOf="@+id/get_region_button"
                android:text="@string/hxuhf_button_set_region" />


        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_channel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/hxuhf_txt_channel"
                android:textAllCaps="false"

                android:textSize="14sp" />

            <Spinner
                android:id="@+id/sp_channel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/tv_channel"
                android:layout_toRightOf="@+id/tv_channel" />

            <Button
                android:id="@+id/get_channel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_toEndOf="@+id/sp_channel"
                android:layout_toRightOf="@+id/sp_channel"
                android:text="@string/hxuhf_button_get_channel" />

            <Button
                android:id="@+id/set_channel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_toEndOf="@+id/get_channel_button"
                android:layout_toRightOf="@+id/get_channel_button"
                android:text="@string/hxuhf_button_set_channel" />


        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/general_cancel"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/ok"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/general_ok"
            android:textAllCaps="false" />
    </LinearLayout>

</LinearLayout>