<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"

    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/scan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/barcode_scan"
            android:textAllCaps="false"
            android:textSize="12sp" />

        <Button
            android:id="@+id/scanning"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:text="@string/barcode_scanning_open"
                        android:textAllCaps="false"

            android:textSize="12sp" />

        <Button
            android:id="@+id/end"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/barcode_scanning_close"
                        android:textAllCaps="false"

            android:textSize="12sp" />

        <Button
            android:id="@+id/clear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/barcode_scan_clear"
                        android:textAllCaps="false"

            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll1"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                android:gravity="center"
                android:text="@string/barcode_scanner_status"
                android:textColor="#000000"
                android:textSize="14sp" />

            <ToggleButton
                android:id="@+id/tb"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="true" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/barcode_scan_is_auto_clear"
                android:textColor="#000000"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>


    </LinearLayout>

    <ScrollView
        android:id="@+id/scv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll9"
        android:layout_margin="5dp"
        android:layout_weight="100"
        android:background="#ffffff"
        android:fillViewport="true">

        <EditText
            android:id="@+id/et_barcode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:enabled="true"
            android:focusable="true"
            android:focusableInTouchMode="false"
            android:gravity="top"
            android:maxLines="20"
            android:minLines="1"
            android:scrollbars="vertical"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:text=""/>

    </ScrollView>

    <LinearLayout
        android:id="@+id/ll3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/scv"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:gravity="center"
            android:text="@string/barcode_scan_all"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/tv_success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/barcode_scan_success"
            android:textColor="@android:color/black"/>


    </LinearLayout>


</LinearLayout>