<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/fingerImage"
                android:layout_width="256px"
                android:layout_height="288px" />

            <ProgressBar
                android:id="@+id/bar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="256px"
                android:layout_height="4dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">


            <Button
                android:id="@+id/capture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fp_gaa_capture" />

            <Button
                android:id="@+id/enroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fp_gaa_enroll" />

            <Button
                android:id="@+id/enroll2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="录入指纹2"
                android:visibility="gone"/>

            <Button
                android:id="@+id/search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fp_gaa_search" />

            <Button
                android:id="@+id/stop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fp_gaa_stop" />

        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <Button
            android:id="@+id/upChar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="上传特征" />

        <Button
            android:id="@+id/downChar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:text="下载特征" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/infos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fp_gaa_infos" />

        <Button
            android:id="@+id/clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:text="@string/fp_gaa_clear" />

    </LinearLayout>

    <TextView
        android:id="@+id/msg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarStyle="insideOverlay"
        android:fadeScrollbars="false"
        />


</LinearLayout>